# VideoSearch

./: .FaceRecog.py.swp  .gitignore  BasicPart.py  DBHandler.py  FaceRecog.py  FeatureIndex.py  MainReader.py  MainSearch.py  MainSearchTest.py  MainSolr.py  ObjectDet.py  PQtest.py  PersonFace.py  PublicTool.py  README.md  SceneMerge.py  SearchFeature.py  SearchPicture.ipynb  SimpleServer.py  Untitled-1.py  VideoReader.py  VideoSample.py  hsvdetect_test.py  main.py  myflask.py  query.sql  search_dense_optim.py  tflask.py  tmp.json
Config/: config.ini
Data/: FeatClean.sh  IndexClean.sh  README.md
Data/Videos/Descriptions/: 20170101.txt  20170102.txt  20170103.txt  20170104.txt  20170105.txt  20170106.txt  20170107.txt  20170108.txt  20170109.txt  20170110.txt  20170111.txt  20170112.txt  20170113.txt  20170114.txt  20170115.txt  20170116.txt  20170117.txt  20170118.txt  20170119.txt  20170120.txt  20170121.txt  20170122.txt  20170123.txt  20170124.txt  20170125.txt  (+340 more)
ObjectDetect/yad2k/: Untitled-1.py  feature_test_yolo.py  mtest_yolo.py  myfeature.py  tran.py  命令
Scene/: MySceneDetect.py  api_test.py
Scene/scenedetect/: __init__.py
Seeta/: FaceFeatureExtract.py  __init__.py  quickrename.py  test_opencv.py  test_pillow.py
Seeta/SeetaFaceEngine/: CMakeLists.txt  README.md
Seeta/SeetaFaceEngine/Release/: Makefile  cmake_install.cmake
Seeta/pyseeta.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scenedetect/: __init__.py  computesim.py  detectors.py  detectors_new.py  detectors_old.py  manager.py
tmp/.ipynb_checkpoints/: SearchPicture-checkpoint.ipynb
(+4 files in other folders)
